update auth flow & fixed api routes
